--- a/ansible/roles/agent_user/tasks/main.yml
+++ b/ansible/roles/agent_user/tasks/main.yml
@@ -31,6 +31,9 @@
     mode: "{{ item.mode }}"
   loop:
     - { src: "{{ playbook_dir }}/../../mcp-config.json", dest: ".claude/claude_code_config.json", mode: "0644" }
-    - { src: "{{ playbook_dir }}/../../build.sh", dest: "build.sh", mode: "0755" }
-    - { src: "{{ playbook_dir }}/../../start_container.sh", dest: "start_container.sh", mode: "0755" }
-    - { src: "{{ playbook_dir }}/../../Dockerfile", dest: "Dockerfile", mode: "0644" }
+    - { src: "{{ playbook_dir }}/../../mcp-config.json", dest: "mcp-config.json", mode: "0644" }
+    - { src: "{{ playbook_dir }}/../../containerize/build.sh", dest: "build.sh", mode: "0755" }
+    - { src: "{{ playbook_dir }}/../../containerize/Dockerfile", dest: "Dockerfile", mode: "0644" }
+    - { src: "{{ playbook_dir }}/../../containerize/test_container.sh", dest: "test_container.sh", mode: "0755" }
+    - { src: "{{ playbook_dir }}/../../scripts/start_container.sh", dest: "start_container.sh", mode: "0755" }
+    - { src: "{{ playbook_dir }}/../../scripts/config.sh", dest: "config.sh", mode: "0755" }
